로그인, 회원가입 기능, 각종 버그 수정, 에러 핸들러 생성